# mother-bot

./: README.md  keep_alive.py  main.py  memory.py  pyproject.toml  talk.py
