[tool.poetry]
name = "repl_python3_Mother"
version = "1.0.0"
description = "A discord bot to manage CTFs"
authors = ["Charm"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
replit = "^3.2.4"
responses = "^0.16.0"
Flask = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
